2007-09-22  Hans de Graaff  <graaff@gentoo.org>

	* xemacs-elisp-common.eclass, xemacs-elisp.eclass: Use die
	consistently in the functions in common, as commented on by Donny
	Berkholz on gentoo-dev. Fix documentation.

2007-09-21  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Provide site-gentoo.
	Recommend require instead of load in einfo message.
	Create default site-start.el when running for the first time.
	(elisp-comp): Move comment so that it will appear in the man page.

2007-09-20  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Set no-byte-compile in
	site-gentoo.el.

2007-09-09  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-install): Remove superfluous dodir.

2007-09-08  Hans de Graaff  <graaff@gentoo.org>

	* xemacs-elisp.eclass: Add unpack code which can also deal with
	simple elisp files.
	Add explanation to die when compiling lisp files fails.
	Add documentation so that man page can be generated.

	* xemacs-elisp-common.eclass: Quote all instances of $@ and $*.
	Use singular autoload in function name to keep interface the same
	as for GNU Emacs.
	Add documentation so that man page can be generated.
	Use a sub-shell for calls to doins and insinto to avoid potential
	environment polution.

2007-09-08  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (elisp_src_install): Die if elisp-install or
	elisp-site-file-install fails.
	(SIMPLE_ELISP, DOCS, NEED_EMACS): Add man comments.

	* elisp-common.eclass (elisp-site-file-install): Remove redundant
	pushd/popd commands. Don't die, return status instead.
	(elisp-compile, elisp-comp, elisp-install): Quote all instances of
	$@ and $*. Don't use ${status}; it is reserved in zsh.
	(elisp-install, elisp-site-file-install): Call insinto and doins
	in a subshell to avoid pollution of calling environment.
	(EMACS_BATCH_CLEAN): New variable, analog to the XEmacs eclasses.

2007-08-21  Christian Faulhammer  <opfer@gentoo.org>
